# bevstack

./: KAGIS_coll_ortho_osttirol_2021160.json  bev_catalog.json  items.json  main.py  pyproject.toml
