[project]
name = "bevstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.47.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pystac>=1.14.1",
    "pystack>=1.5.1",
    "rasterio>=1.4.3",
    "rio-stac>=0.12.0",
    "shapely>=2.1.2",
]
